--- a/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
+++ b/src/Pin.CricketDarts.Server/Components/ScoreBoard.razor
@@ -55,9 +55,27 @@
                 <div class="col"></div>
                 <div class="col">Current score: @playerTwo.CurrentTotalScore</div>
             </div>
+            <div class="row" hidden="@(!ShowThrowsSelection)">
+                <div class="col">How many triples and doubles did the player throw?</div>
+                <div class="col">
+                    @if (AmountOfTriples != 0 && AmountOfThrows != 5)
+                    {
+                        <button @onclick="e=> FillValues(AmountOfTriples)">@AmountOfTriples Triple(s)</button>
+                    }
+                    @if (AmountOfDoubles != 0 && AmountOfThrows != 5)
+                    {
+                        <button @onclick="e=> FillValues(0, AmountOfDoubles)">@AmountOfDoubles Double(s)</button>
+                    }
+                    @if (AmountOfThrows == 5)
+                    {
+                        <button @onclick="e=> FillValues(0, AmountOfDoubles)">@AmountOfDoubles doubles</button>
+                        <button @onclick="e=> FillValues(AmountOfTriples, 1)">@AmountOfTriples triple and 1 double</button>
+                    }
+                </div>
+            </div>
             <div hidden="@(!ActiveGame.IsActive)">
                 <div>Current turn: @CurrentPlayer.Name</div>
-                <div><button class="btn btn-light" @onclick="e => ToggleTurns.InvokeAsync()">New turn</button></div>
+                <div><button class="btn btn-light" @onclick="e => ToggleTurns.InvokeAsync(true)">New turn</button></div>
             </div>
             <div hidden="@ActiveGame.IsActive">
                 <div>The game has ended!</div>
@@ -70,13 +88,34 @@
 
 @code {
     [Parameter]
+    public bool ShowThrowsSelection { get; set; } = false;
+    public int AmountOfTriples { get; set; }
+    public int AmountOfDoubles { get; set; }
+    public int AmountOfThrows { get; set; }
+    public int FinalSelection { get; set; }
+
+    public Dictionary<string, int> TripleDoubleValues { get; set; } = new();
+
+    [Parameter]
     public Game ActiveGame { get; set; }
     [Parameter]
     public EventCallback<int> UpdateScoreBoard { get; set; }
     [Parameter]
-    public EventCallback ToggleTurns { get; set; }
+    public EventCallback<Dictionary<string, int>> UpdateDoublesTriples { get; set; }
+    [Parameter]
+    public EventCallback<bool> ToggleTurns { get; set; }
+    [Parameter]
+    public EventCallback CancelSelection { get; set; }
     [Parameter]
     public Player CurrentPlayer { get; set; }
+
+    private void FillValues(int triples = 0, int doubles = 0)
+    {
+        Dictionary<string, int> values = new Dictionary<string, int>();
+        values.Add("Triples", triples);
+        values.Add("Doubles", doubles);
+        UpdateDoublesTriples.InvokeAsync(values);
+    }
 
     private string GetSymbol(int target, Guid playerId)
     {
@@ -108,6 +147,25 @@
         if (!ActiveGame.IsActive) return true;
         if (player.HasTurn == true) return false;
         else return true;
+    }
+
+    public async Task SelectThrows(int amountOfThrows)
+    {
+        AmountOfTriples = 0;
+        AmountOfDoubles = 0;
+        AmountOfThrows = amountOfThrows;
+        ShowThrowsSelection = true;
+
+        if (ActiveGame.ScoreBoardEntries.Where(s => s.TurnId == ActiveGame.CurrentTurnId).GroupBy(x => x.Target).Any(c => c.Count() == 2)) {
+            AmountOfDoubles = (amountOfThrows / 2);
+        }
+        if (ActiveGame.ScoreBoardEntries.Where(s => s.TurnId == ActiveGame.CurrentTurnId).GroupBy(x => x.Target).Any(c => c.Count() == 3))
+        {
+            AmountOfTriples = (amountOfThrows / 3);
+        }
+        if (AmountOfDoubles == 0 && AmountOfTriples == 0) await CancelSelection.InvokeAsync();
+
+        await InvokeAsync(StateHasChanged);
     }
 }
 
